# LRET

./: .dockerignore  .gitignore  AGENTS.md  AGENT_GUIDE.md  BENCHMARKING_EXECUTION_STRATEGY.md  BENCHMARKING_METHODOLOGY_CONFIRMATION.md  BENCHMARKING_QUICK_ANSWER.md  CIRQ_COMPARISON_GUIDE.md  CMakeLists.txt  COMPLETE_TESTING_ROADMAP.md  COMPLETE_TIER_LIST_ALL_PHASES.md  DOCKER_UNLIMITED_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.dev  Dockerfile.gpu  EXPLORATION_COMPLETE.md  HANDOFF_TO_SONNET45_CIRQ_ROADMAP.md  HARDWARE_DEPENDENT_TESTS.md  LICENSE  MANUAL_CIRCUIT_EXECUTION_GUIDE.md  OPENCODE_PENNYLANE_QNN_TEST.md  OPENCODE_QUICKSTART.md  OPENCODE_TESTING_GUIDE.md  PENNYLANE_ALGORITHM_CATALOG.md  PENNYLANE_ALGORITHM_SUMMARY.md  PENNYLANE_BENCHMARKING_STRATEGY.md  PENNYLANE_COMPREHENSIVE_DOCUMENTATION.md  PENNYLANE_QUICK_REFERENCE.md  PHASE_2_3_7_EXPLORATION.md  PHASE_2_3_7_KEY_FINDINGS.md  PHASE_5_ANALYSIS.md  PHASE_5_EXECUTIVE_SUMMARY.md  PHASE_5_STRATEGY.md  PHASE_6B_INTEGRATION_TESTING_STRATEGY.md  PHASE_6C_BENCHMARKING_STRATEGY.md  PHASE_6D_COMPLETION_REPORT.md  PHASE_6D_DOCUMENTATION_STRATEGY.md  PHASE_6_SIMPLE_GUIDE.md  PHASE_6_STRATEGY.md  (+62 more)
.github/workflows/: ml-tests.yml
GPU_Debugging_and_Testing/: README.md  run_hardware_dependent_tests.py  setup_and_run_hardware_tests.ps1  setup_and_run_hardware_tests.sh
benchmark_output/: benchmark_results.csv  benchmark_summary.json
benchmarks/: TEMPLATE_VERIFICATION.md  benchmark_4q_25s_100e_10n.py  benchmark_8q_50s_100e_10n.py  fair_benchmark_simple.py  fair_noisy_benchmark.py  fair_noisy_benchmark_quick.py  fair_noisy_benchmark_v2.py  pennylane_benchmark_template.py  qnn_benchmark_native.py  qnn_benchmark_noisy_10q.py
benchmarks/pennylane/: 4q_50e_25s_10n.py  8q_100e_100s_12n.py  8q_200e_200s_15n.py  CROSS_PLATFORM_FIX.md  PARALLELIZATION_ANALYSIS.md  README.md  REQUIREMENTS.md  SETUP_COMPLETE_SUMMARY.md  (+19 more)
circuit_tools/: batch_execute.sh  compare_circuits.py  generate_qft.py  generate_variational_circuit.py
cirq_comparison/: BENCHMARK_RESULTS.md  CORRECTED_BENCHMARK_ANALYSIS.md  CRITICAL_ISSUES_ANALYSIS.md  DEEP_ANALYSIS_RESPONSE.md  EXECUTION_ROADMAP.md  README.md  SETUP_COMPLETE_REPORT.md  accuracy_results_20260122_004458.json  accuracy_test_Bell-3q.json  accuracy_test_GHZ-4q-noise1.json  accuracy_test_GHZ-4q.json  accuracy_test_GHZ-6q.json  accuracy_test_GHZ-8q.json  accuracy_test_Random-4q-d10-noise1.json  accuracy_test_Random-4q-d10.json  accuracy_test_Random-6q-d15.json  accuracy_test_Random-8q-d15-noise1.json  accuracy_test_W-5q.json  analyze_results.py  benchmark_accuracy.py  benchmark_large_scale.py  benchmark_noise_exe_output.txt  benchmark_with_noise.py  benchmark_with_noise_exe.py  circuit_generator.py  cirq_fdm_wrapper.py  comprehensive_benchmark.py  comprehensive_benchmark_no_noise.py  corrected_benchmark_runner.py  corrected_circuit_generator.py  create_plots.py  deep_diagnostic.py  deep_diagnostic_v2.py  depol_output.txt  diagnostic_bell.json  diagnostic_bell_output.json  diagnostic_output.txt  diagnostic_test.py  fair_benchmark.py  fair_output.txt  (+52 more)
docs/examples/cpp/: 01_basic_simulation.cpp  CMakeLists.txt  README.md
include/: advanced_noise.h  autodiff.h  benchmark_runner.h  benchmark_types.h  checkpoint.h  circuit_optimizer.h  cli_parser.h  distributed_autodiff.h  distributed_gpu.h  distributed_perf.h  fault_tolerance.h  fdm_simulator.h  gate_fusion.h  gates_and_noise.h  gpu_simulator.h  json_interface.h  mpi_parallel.h  noise_import.h  output_formatter.h  parallel_modes.h  progressive_csv.h  qec_adaptive.h  qec_decoder.h  qec_distributed.h  qec_logical.h  qec_stabilizer.h  qec_syndrome.h  qec_types.h  resource_monitor.h  scheduler.h  simd_kernels.h  simulator.h  structured_csv.h  types.h  utils.h
python/: BUG_FIX_SUMMARY.md  benchmark_qnn_corrected.py  benchmark_qnn_final.py  debug_grad.py  run_qnn_benchmark_8q.py  setup.py  test_device_fixes.py
results/: 100_EPOCH_BENCHMARK_SUCCESS.md  bench_out.txt  benchmark_stdout.txt  compare_all_4q_50e_25s_10n_20260119_030229.json  noisy_qnn_10q_log_20260111_035647.csv  noisy_qnn_10q_results_20260111_035647.json  parallel_mode_comparison_20260119_022434.json  qnn_benchmark_log_20260111_033159.csv  qnn_benchmark_log_20260111_033525.csv  qnn_benchmark_results_20260111_033159.json  qnn_benchmark_results_20260111_033200.json  qnn_benchmark_results_20260111_033309.json  qnn_benchmark_results_20260111_033525.json  simple_stderr.txt  simple_stdout.txt  training_4q_50e_row_20260119_015827.json
scripts/: benchmark_analysis.py  benchmark_suite.py  benchmark_visualize.py  calibrate_noise_model.py  compare_fidelities.py  detect_memory_effects.py  download_ibm_noise.py  example_commands_phase4.txt  example_commands_phase5.txt  fit_correlated_errors.py  fit_depolarizing.py  fit_t1_t2.py  fit_time_scaling.py  generate_calibration_data.py  generate_qec_training_data.py  sample_noise_with_leakage.json  test_calibration.py  train_ml_decoder.py
src/: autodiff.cpp  benchmark_runner.cpp  benchmark_types.cpp  checkpoint.cpp  circuit_optimizer.cpp  cli_parser.cpp  distributed_autodiff.cpp  distributed_gpu.cu  distributed_perf.cpp  fault_tolerance.cpp  fdm_simulator.cpp  gate_fusion.cpp  gates_and_noise.cpp  gpu_simulator.cu  json_interface.cpp  mpi_parallel.cpp  noise_import.cpp  output_formatter.cpp  parallel_modes.cpp  progressive_csv.cpp  python_bindings.cpp  qec_adaptive.cpp  qec_decoder.cpp  qec_distributed.cpp  qec_logical.cpp  qec_stabilizer.cpp  qec_syndrome.cpp  qec_types.cpp  resource_monitor.cpp  simd_kernels.cpp  simulator.cpp  structured_csv.cpp  utils.cpp
tests/: demo_batch.cpp  test_advanced_noise.cpp  test_autodiff.cpp  test_autodiff_multi.cpp  test_autodiff_multi_gpu.cpp  test_checkpoint.cpp  test_distributed_gpu.cpp  test_distributed_gpu_mpi.cpp  test_fault_tolerance.cpp  test_leakage_measurement.cpp  test_multi_gpu_collectives.cpp  test_multi_gpu_load_balance.cpp  test_multi_gpu_sync.cpp  test_qec_adaptive.cpp  test_qec_decoder.cpp  test_qec_distributed.cpp  test_qec_logical.cpp  test_qec_stabilizer.cpp  test_qec_syndrome.cpp  test_scheduler.cpp
(+278 files in other folders)
